fix: first td left-aligned on phones (#235)
* fix: first td left-aligned on phones

* chore: bumped version

--- a/style/elvis/css/elvis.css
+++ b/style/elvis/css/elvis.css
@@ -4208,7 +4208,12 @@ input:focus {
   padding: 10px 16px;
 }
 
-.e-table-mobile td {
+.e-table-mobile td:first-of-type {
+  text-align: left;
+}
+
+.e-table-mobile th + td:first-of-type,
+.e-table-mobile td:not(:first-of-type) {
   text-align: right;
 }
 
